# Pico-Sequencer-Synth

./: CMakeLists.txt  LICENSE  README.md  synth_sequencer.h
example/: CMakeLists.txt  example.c
sequencer/: pitches.h  sequencer.c  sequencer.h
sound_i2s/: sound_i2s.c  sound_i2s.h  sound_i2s_8bits.pio
sound_pwm/: sound_pwm.c  sound_pwm.h
synth/: synth.c  synth.h
